composer.json updates

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "codelab/flaskphp",
   "description": "FlaskPHP framework by Codelab",
+  "type": "package",
   "authors": [
     {
       "name": "Codelab Solutions OÜ",
