--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "name": "codelab/flaskphp",
   "description": "FlaskPHP framework by Codelab",
+  "homepage": "http://www.flaskphp.com",
   "type": "package",
+  "license": "MIT",
   "authors": [
     {
       "name": "Codelab Solutions OÜ",
@@ -10,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "codelab/flaskhttp": "*",
+    "codelab/flaskhttp": ">=1.0.0",
     "leafo/scssphp": ">=0.6.7",
     "tedivm/jshrink": "~1.0",
     "phpmailer/phpmailer": "~5.2"
