--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": ">=7.0",
     "codelab/flaskhttp": ">=1.0.0",
     "leafo/scssphp": ">=0.6.7",
-    "leafo/lessphp": ">=0.5.0",
+    "oyejorge/less.php": "~1.7.0.9",
     "tedivm/jshrink": "~1.0",
     "phpmailer/phpmailer": "~5.2"
   },
