--- a/static/iconation/config.json
+++ b/static/iconation/config.json
@@ -1381,6 +1381,50 @@
       "css": "eye-off",
       "code": 59608,
       "src": "elusive"
+    },
+    {
+      "uid": "861ab06e455e2de3232ebef67d60d708",
+      "css": "minus",
+      "code": 59609,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "10b2be8b48bebc1974d6f94bac9de71d",
+      "css": "gender-f",
+      "code": 59610,
+      "src": "mfglabs"
+    },
+    {
+      "uid": "23c2239369a69f752e790de95123b9e9",
+      "css": "gender-m",
+      "code": 59611,
+      "src": "mfglabs"
+    },
+    {
+      "uid": "500cde26773d15aaac1bfaa2a33cc5a9",
+      "css": "gender-o",
+      "code": 62759,
+      "src": "mfglabs"
+    },
+    {
+      "uid": "3a230e539a4f3b904debd04c6c155034",
+      "css": "questionmark",
+      "code": 59612,
+      "src": "entypo"
+    },
+    {
+      "uid": "3d9079f4f892dc9fc42a198b4255427e",
+      "css": "dog",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M1.2 1.5L1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.2 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.5 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.4 1.1 1.3 1.1 1.3 1.1 1.1 1 1.3C1 1.4 1 1.4 1.1 1.4 1.1 1.5 1.1 1.5 1 1.5 0.9 1.5 0.9 1.4 0.9 1.4L0.9 1.3 0.9 1.1 0.9 1C0.8 1 0.7 1 0.6 0.9L0.5 0.9C0.5 0.9 0.5 1 0.5 1L0.5 1.1 0.4 1.2 0.4 1.3C0.4 1.3 0.4 1.3 0.4 1.3L0.4 1.4C0.5 1.5 0.5 1.6 0.4 1.5L0.4 1.5 0.3 1.5C0.3 1.5 0.3 1.4 0.3 1.3L0.3 1.2C0.2 1.2 0.2 1.4 0.2 1.4L0.3 1.5C0.3 1.5 0.2 1.6 0.2 1.6 0.1 1.6 0.1 1.5 0.1 1.4L0.1 1.4C0.1 1.3 0.1 1.2 0.1 1.2L0.1 1.2C0.2 1.1 0.1 1 0.1 1 0.1 0.9 0.1 0.8 0.1 0.7L0.1 0.7C0.1 0.7 0.1 0.6 0.1 0.6 0.1 0.5 0.1 0.4 0.1 0.4L0.1 0.4C0.2 0.4 0.2 0.6 0.2 0.6L0.8 0.6 0.8 0.6C0.9 0.6 0.9 0.5 0.9 0.5L1 0.5C1.1 0.6 1.1 0.6 1.2 0.6 1.3 0.8 1.2 0.9 1.2 1L1.2 1.1C1.2 1.1 1.2 1.2 1.2 1.3L1.2 1.4C1.2 1.4 1.2 1.4 1.2 1.4 1.3 1.4 1.3 1.5 1.2 1.5L1.2 1.5 1.2 1.5ZM1.3 0.2L1.3 0.2 1.3 0.2 1.3 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.4 0.3 1.5 0.4C1.5 0.4 1.5 0.4 1.6 0.4L1.6 0.4C1.6 0.4 1.6 0.5 1.6 0.5L1.6 0.5C1.5 0.6 1.4 0.6 1.4 0.6L1.3 0.5 1.3 0.5 1.3 0.5 1.3 0.6C1.2 0.5 1.1 0.5 1 0.4L1.2 0.3 1.2 0.2 1.2 0.2 1.2 0.2C1.2 0.2 1.3 0.1 1.3 0.1 1.3 0.1 1.4 0.2 1.3 0.2L1.3 0.2 1.3 0.2 1.3 0.2",
+        "width": 1000
+      },
+      "search": [
+        "dog"
+      ]
     }
   ]
 }
