--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": ">=7.0",
     "codelab/flaskhttp": ">=1.0.0",
     "leafo/scssphp": ">=0.6.7",
-    "kylekatarnls/less.php": "dev-master",
+    "kylekatarnls/less.php": ">=1.7.0",
     "tedivm/jshrink": "~1.0",
     "phpmailer/phpmailer": "~5.2"
   },
