--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": ">=7.0",
     "codelab/flaskhttp": ">=1.0.0",
-    "leafo/scssphp": ">=0.6.7",
+    "scssphp/scssphp": ">=1.0.0",
     "kylekatarnls/less.php": ">=1.7.0",
     "tedivm/jshrink": "~1.0",
     "phpmailer/phpmailer": "~5.2"
